--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -231,8 +231,8 @@
   "memorize_passphrase_help": "Αποθηκεύστε αυτήν τη φράση πρόσβασης σε ασφαλές μέρος. Αυτή η φράση πρόσβασης απαιτείται για την πρόσβαση στον λογαριασμό σας Signum.",
   "memorize_passphrase_help_addon": "Εάν χάσετε τη φράση πρόσβασης, δεν θα μπορείτε να κάνετε συναλλαγές, δηλαδή τα κέρματά σας χάνονται Η φράση πρόσβασης δεν μπορεί να ανακτηθεί. Κρατήστε μυστική αυτήν τη φράση πρόσβασης. Όλοι όσοι γνωρίζουν τη φράση πρόσβασης είναι de facto κάτοχος του λογαριασμού.",
   "message": "Μήνυμα",
-  "message_is_text": "Το μήνυμα είναι κείμενο;",
-  "messages": "Μηνύματα",
+  "message_is_text": "Γραπτό μήνυμα",
+  "messages": "συνομιλίες",
   "minimum_fee": "Ελάχιστο",
   "multi_out_payment": "Πληρωμές",
   "my_assets": "My Tokens",
@@ -530,7 +530,7 @@
   "account_successfully_deleted": "Οι λογαριασμοί καταργήθηκαν με επιτυχία",
   "no_public_key_title": "Προειδοποίηση! - Αυτός ο λογαριασμός δεν διαθέτει δημόσιο κλειδί!",
   "not_registered_title": "Αυτός ο λογαριασμός δεν είναι εγγεγραμμένος στο blockchain",
-  "not_registered_warning": "Αυτός ο λογαριασμός δεν έχει ακόμη συναλλαγές. Εάν σκοπεύετε να χρησιμοποιήσετε αυτόν τον λογαριασμό για αποστολή και/ή λήψη, συνιστάται να ενεργοποιήσετε αυτόν τον λογαριασμό τώρα.",
+  "not_registered_warning": "Αυτός ο λογαριασμός δεν έχει ακόμη συναλλαγές. Εάν σκοπεύετε να χρησιμοποιήσετε αυτόν τον λογαριασμό για αποστολή και/ή λήψη, συνιστάται να ενεργοποιήσετε/προστατέψετε αυτόν τον λογαριασμό τώρα.",
   "load_all_transactions": "Φόρτωση όλων",
   "load_all_transactions_hint": "Η φόρτωση όλων των συναλλαγών προκαλεί τελικά πολλά αιτήματα με χρήση υψηλού εύρους ζώνης. Ανάλογα με τη δική σας και τους κόμβους σύνδεση στο διαδίκτυο και τον αριθμό των συναλλαγών, αυτή η ενέργεια μπορεί να διαρκέσει κάποιο χρόνο. Μετά την ανάκτηση, οι συναλλαγές αποθηκεύονται στην κρυφή μνήμη τοπικά. Θέλετε πραγματικά να φορτώσετε όλες τις συναλλαγές; (Το όριο ανάκτησης περιορίζεται σε 10 χιλιάδες συναλλαγές)",
   "manage_accounts": "Διαχείριση λογαριασμών",
@@ -563,5 +563,11 @@
   "add_as_contact": "Προσθήκη ως επαφή",
   "edit_contact": "Επεξεργασία επαφής",
   "error_add_contact": "Η επαφή δεν προστέθηκε. Πιθανότατα έχετε ήδη προσθέσει αυτόν τον λογαριασμό.",
-  "no_contact_found": "Δεν βρέθηκε επαφή"
+  "no_contact_found": "Δεν βρέθηκε επαφή",
+  "contact": "Επικοινωνία",
+  "send_single_message": "Να στείλετε μήνυμα",
+  "message_is_binary": "Μήνυμα δεδομένων",
+  "add_account_or_contact": "Προσθήκη λογαριασμού ή επαφής",
+  "hint_new_account": "Αυτός είναι ένας νέος λογαριασμός. Δεν έχει εγγραφεί ακόμα στην αλυσίδα, δηλαδή δεν έχει συναλλαγές.",
+  "account_new": "Νέος"
 }
