--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -231,8 +231,8 @@
   "memorize_passphrase_help": "कृपया इस पासफ़्रेज़ को किसी सुरक्षित स्थान पर संगृहीत करें. आपके साइनम खाते तक पहुँचने के लिए इस पासफ़्रेज़ की आवश्यकता है।",
   "memorize_passphrase_help_addon": "यदि आप पासफ़्रेज़ खो देते हैं तो आप कोई लेन-देन नहीं कर पाएंगे, यानी आपके सिक्के खो गए हैं। पासफ़्रेज़ पुनर्प्राप्त करने योग्य नहीं है। इस पासफ़्रेज़ को गुप्त रखें। पासफ़्रेज़ जानने वाला हर व्यक्ति वास्तव में खाते का स्वामी होता है।",
   "message": "संदेश",
-  "message_is_text": "संदेश पाठ है?",
-  "messages": "संदेशों",
+  "message_is_text": "पाठ संदेश",
+  "messages": "बात चिट",
   "minimum_fee": "न्यूनतम",
   "multi_out_payment": "भुगतान",
   "my_assets": "मेरे टोकन",
@@ -530,7 +530,7 @@
   "account_successfully_deleted": "खाता (खाते) सफलतापूर्वक निकाले गए",
   "no_public_key_title": "चेतावनी! - इस खाते के पास कोई सार्वजनिक कुंजी नहीं है!",
   "not_registered_title": "यह खाता ब्लॉकचेन में पंजीकृत नहीं है",
-  "not_registered_warning": "इस खाते में अभी तक कोई लेन-देन नहीं हुआ है। यदि आप भेजने और/या प्राप्त करने के लिए इस खाते का उपयोग करने का इरादा रखते हैं, तो इस खाते को अभी सक्रिय करने की अनुशंसा की जाती है।",
+  "not_registered_warning": "इस खाते में अभी तक कोई लेन-देन नहीं हुआ है। यदि आप भेजने और/या प्राप्त करने के लिए इस खाते का उपयोग करने का इरादा रखते हैं, तो इस खाते को अभी सक्रिय/सुरक्षित करने की अनुशंसा की जाती है।",
   "load_all_transactions": "सभी लोड करें",
   "load_all_transactions_hint": "सभी लेन-देन लोड करने से अंततः उच्च बैंडविड्थ उपयोग के साथ बहुत सारे अनुरोध होते हैं। आपके और नोड्स के इंटरनेट कनेक्शन और लेन-देन की संख्या के आधार पर इस कार्रवाई में कुछ समय लग सकता है। प्राप्त करने के बाद, लेनदेन स्थानीय रूप से कैश किए जाते हैं। क्या आप वाकई सभी लेन-देन लोड करना चाहते हैं? (लाने की सीमा 10K लेन-देन तक सीमित है)",
   "manage_accounts": "खातों का प्रबंधन",
@@ -563,5 +563,11 @@
   "add_as_contact": "संपर्क के रूप में जोड़ें",
   "edit_contact": "संपादित संपर्क",
   "error_add_contact": "संपर्क नहीं जोड़ा गया। संभवत: आपने वह खाता पहले ही जोड़ लिया है।",
-  "no_contact_found": "कोई संपर्क नहीं मिला"
+  "no_contact_found": "कोई संपर्क नहीं मिला",
+  "contact": "संपर्क",
+  "send_single_message": "मेसेज भेजें",
+  "message_is_binary": "डेटा संदेश",
+  "add_account_or_contact": "खाता या संपर्क जोड़ें",
+  "hint_new_account": "यह एक नया खाता है। यह अभी तक श्रृंखला पर पंजीकृत नहीं है, अर्थात इसका कोई लेन-देन नहीं है।",
+  "account_new": "नया"
 }
