--- a/web/angular-wallet/src/locales/it.json
+++ b/web/angular-wallet/src/locales/it.json
@@ -231,8 +231,8 @@
   "memorize_passphrase_help": "Conserva questa passphrase in un luogo sicuro. Questa passphrase è necessaria per accedere al tuo account Signum.",
   "memorize_passphrase_help_addon": "Se perdi la passphrase non potrai effettuare alcuna transazione, ovvero le tue monete andranno perse. La passphrase non è recuperabile. Mantieni segreta questa passphrase. Chiunque conosca la passphrase è di fatto il proprietario dell'account.",
   "message": "Messaggio",
-  "message_is_text": "Il messaggio è testo?",
-  "messages": "Messaggi",
+  "message_is_text": "Messaggio testuale",
+  "messages": "Conversazioni",
   "minimum_fee": "Minimo",
   "multi_out_payment": "Pagamenti",
   "my_assets": "I miei gettoni",
@@ -530,7 +530,7 @@
   "account_successfully_deleted": "Account rimossi con successo",
   "no_public_key_title": "Avvertimento! - Questo account non possiede una chiave pubblica!",
   "not_registered_title": "Questo account non è registrato nella blockchain",
-  "not_registered_warning": "Questo account non ha ancora transazioni. Se intendi utilizzare questo account per l'invio e/o la ricezione, ti consigliamo di attivarlo ora.",
+  "not_registered_warning": "Questo account non ha ancora transazioni. Se intendi utilizzare questo account per l'invio e/o la ricezione, ti consigliamo di attivare/proteggere questo account ora.",
   "load_all_transactions": "Carica tutto",
   "load_all_transactions_hint": "Il caricamento di tutte le transazioni alla fine causa molte richieste con un elevato utilizzo della larghezza di banda. A seconda della connessione Internet tua e dei nodi e del numero di transazioni, questa azione può richiedere del tempo. Una volta recuperate, le transazioni vengono memorizzate nella cache locale. Vuoi davvero caricare tutte le transazioni? (Il limite di recupero è limitato a 10.000 transazioni)",
   "manage_accounts": "Gestisci account",
@@ -563,5 +563,11 @@
   "add_as_contact": "Aggiungi come contatto",
   "edit_contact": "Modifica il contatto",
   "error_add_contact": "Contatto non aggiunto. Molto probabilmente hai già aggiunto quell'account.",
-  "no_contact_found": "Nessun contatto trovato"
+  "no_contact_found": "Nessun contatto trovato",
+  "contact": "Contatto",
+  "send_single_message": "Invia messaggio",
+  "message_is_binary": "Messaggio di dati",
+  "add_account_or_contact": "Aggiungi account o contatto",
+  "hint_new_account": "Questo è un nuovo account. Non è ancora registrato sulla catena, cioè non ha transazioni.",
+  "account_new": "Nuovo"
 }
