--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -231,8 +231,8 @@
   "memorize_passphrase_help": "このパスフレーズは安全な場所に保管してください。このパスフレーズは、Signum アカウントにアクセスするために必要です。",
   "memorize_passphrase_help_addon": "パスフレーズを紛失すると、取引ができなくなります。つまり、コインが失われます。パスフレーズは回復できません。このパスフレーズは秘密にしておいてください。パスフレーズを知っている人は誰でも、事実上アカウントの所有者です。",
   "message": "メッセージ",
-  "message_is_text": "メッセージはテキスト?",
-  "messages": "メッセージ",
+  "message_is_text": "メール",
+  "messages": "会話",
   "minimum_fee": "最小",
   "multi_out_payment": "支払い",
   "my_assets": "私のトークン",
@@ -530,7 +530,7 @@
   "account_successfully_deleted": "アカウントが正常に削除されました",
   "no_public_key_title": "警告！ - このアカウントは公開鍵を所有していません!",
   "not_registered_title": "このアカウントはブロックチェーンに登録されていません",
-  "not_registered_warning": "このアカウントにはまだ取引がありません。このアカウントを送受信に使用する場合は、今すぐこのアカウントを有効にすることをお勧めします。",
+  "not_registered_warning": "このアカウントにはまだ取引がありません。このアカウントを送受信に使用する場合は、今すぐこのアカウントをアクティブ化/保護することをお勧めします。",
   "load_all_transactions": "すべてロード",
   "load_all_transactions_hint": "すべてのトランザクションをロードすると、最終的に帯域幅の使用量が多い多くのリクエストが発生します。あなたとノードのインターネット接続とトランザクションの数によっては、このアクションに時間がかかる場合があります。フェッチされると、トランザクションはローカルにキャッシュされます。本当にすべてのトランザクションをロードしますか? (フェッチ制限は 10K トランザクションに制限されています)",
   "manage_accounts": "アカウントの管理",
@@ -563,5 +563,11 @@
   "add_as_contact": "連絡先として追加",
   "edit_contact": "連絡先を編集",
   "error_add_contact": "連絡先が追加されていません。ほとんどの場合、そのアカウントは既に追加されています。",
-  "no_contact_found": "連絡先が見つかりません"
+  "no_contact_found": "連絡先が見つかりません",
+  "contact": "コンタクト",
+  "send_single_message": "メッセージを送る",
+  "message_is_binary": "データメッセージ",
+  "add_account_or_contact": "アカウントまたは連絡先を追加",
+  "hint_new_account": "これは新しいアカウントです。まだチェーンに登録されていません。つまり、トランザクションはありません。",
+  "account_new": "新しい"
 }
