--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -231,8 +231,8 @@
   "memorize_passphrase_help": "Сохраните эту кодовую фразу в надежном месте. Эта фраза необходима для доступа к вашей учетной записи Signum.",
   "memorize_passphrase_help_addon": "Если вы потеряете кодовую фразу, вы не сможете совершать транзакции и ваши монеты будут утеряны. Секретную фразу восстановить невозможно. Храните свою фразу в тайне. Каждый, кто узнает данную фразу, фактически будет являться владельцем этой учетной записи.",
   "message": "Сообщение",
-  "message_is_text": "Сообщение является текстом?",
-  "messages": "Сообщения",
+  "message_is_text": "Текстовое сообщение",
+  "messages": "Разговоры",
   "minimum_fee": "Минимально",
   "multi_out_payment": "Мульти-платежи",
   "my_assets": "Мои токены",
@@ -530,7 +530,7 @@
   "account_successfully_deleted": "Аккаунты успешно удалены",
   "no_public_key_title": "Предупреждение! - У этой учетной записи нет открытого ключа!",
   "not_registered_title": "Этот аккаунт не зарегистрирован в блокчейне",
-  "not_registered_warning": "В этом аккаунте еще нет транзакций. Если вы собираетесь использовать эту учетную запись для отправки и/или получения, рекомендуется активировать эту учетную запись сейчас.",
+  "not_registered_warning": "В этом аккаунте еще нет транзакций. Если вы собираетесь использовать эту учетную запись для отправки и/или получения, рекомендуется активировать/защитить эту учетную запись сейчас.",
   "load_all_transactions": "Загрузить все",
   "load_all_transactions_hint": "Загрузка всех транзакций в конечном итоге приводит к большому количеству запросов с высокой пропускной способностью. В зависимости от вашего интернет-соединения и интернет-соединения узлов, а также количества транзакций, это действие может занять некоторое время. После получения транзакции кэшируются локально. Вы действительно хотите загрузить все транзакции? (Ограничение получения ограничено транзакциями 10K)",
   "manage_accounts": "Управление учетными записями",
@@ -563,5 +563,11 @@
   "add_as_contact": "Добавить как контакт",
   "edit_contact": "Изменить контакт",
   "error_add_contact": "Контакт не добавлен. Скорее всего, вы уже добавили эту учетную запись.",
-  "no_contact_found": "Контакт не найден"
+  "no_contact_found": "Контакт не найден",
+  "contact": "Контакт",
+  "send_single_message": "Отправить сообщение",
+  "message_is_binary": "Сообщение данных",
+  "add_account_or_contact": "Добавить учетную запись или контакт",
+  "hint_new_account": "Это новый аккаунт. Он еще не зарегистрирован в цепочке, т.е. не имеет транзакций.",
+  "account_new": "Новый"
 }
