--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -231,8 +231,8 @@
   "memorize_passphrase_help": "Молимо вас да ову лозинку сачувате на сигурном месту. Ова приступна фраза је потребна за приступ вашем Сигнум налогу.",
   "memorize_passphrase_help_addon": "Ако изгубите приступну фразу, нећете моћи да обављате никакве трансакције, тј. Ваши новчићи су изгубљени. Приступна фраза се не може повратити. Држите ову приступну фразу у тајности. Свако ко зна приступну фразу је де фацто власник налога.",
   "message": "Порука",
-  "message_is_text": "Порука је Текст?",
-  "messages": "Поруке",
+  "message_is_text": "Текстуална порука",
+  "messages": "Разговори",
   "minimum_fee": "Минимум",
   "multi_out_payment": "Плаћања",
   "my_assets": "Моји жетони",
@@ -530,7 +530,7 @@
   "account_successfully_deleted": "Налози су успешно уклоњени",
   "no_public_key_title": "Упозорење! - Овај налог не поседује јавни кључ!",
   "not_registered_title": "Овај налог није регистрован у блоцкцхаин-у",
-  "not_registered_warning": "Овај налог још увек нема трансакција. Ако намеравате да користите овај налог за слање и/или примање, препоручује се да одмах активирате овај налог.",
+  "not_registered_warning": "Овај налог још увек нема трансакција. Ако намеравате да користите овај налог за слање и/или примање, препоручује се да сада активирате/заштитите овај налог.",
   "load_all_transactions": "Учитај све",
   "load_all_transactions_hint": "Учитавање свих трансакција на крају изазива много захтева са великом употребом пропусног опсега. У зависности од ваше и интернет везе чворова и броја трансакција, ова радња може потрајати. Једном преузете, трансакције се локално кеширају. Да ли заиста желите да учитате све трансакције? (Ограничење преузимања је ограничено на 10.000 трансакција)",
   "manage_accounts": "Управљајте налозима",
@@ -563,5 +563,11 @@
   "add_as_contact": "Додај као контакт",
   "edit_contact": "Уреди контакт",
   "error_add_contact": "Контакт није додат. Највероватније сте већ додали тај налог.",
-  "no_contact_found": "Није пронађен ниједан контакт"
+  "no_contact_found": "Није пронађен ниједан контакт",
+  "contact": "Контакт",
+  "send_single_message": "Пошаљи поруку",
+  "message_is_binary": "Дата Мессаге",
+  "add_account_or_contact": "Додајте налог или контакт",
+  "hint_new_account": "Ово је нови налог. Још увек није регистрован у ланцу, тј. нема трансакција.",
+  "account_new": "Нова"
 }
