--- a/web/angular-wallet/src/locales/de-de.json
+++ b/web/angular-wallet/src/locales/de-de.json
@@ -37,7 +37,7 @@
   "amount": "Menge",
   "amount_nqt": "Menge",
   "application": "Anwendung",
-  "arbitrary_message": "Botschaft",
+  "arbitrary_message": "Nachricht",
   "are_you_sure": "Bist Du sicher?",
   "ask_order": "Bestellung anfordern",
   "ask_order_cancellation": "Verkaufsauftrag stornieren",
@@ -230,9 +230,9 @@
   "marketplace_removal": "Entfernung des Marktplatzes",
   "memorize_passphrase_help": "Bitte bewahre diese Recovery-Phrase an einem sicheren Ort auf. Diese Recovery-Phrase wird benötigt, um auf das Signum-Konto zuzugreifen.",
   "memorize_passphrase_help_addon": "Wenn Du die Recovery-Phrase verlierst, kannst Du keine Transaktionen durchführen und/oder dein Konto in eine Wallet importieren, d. h. deine Signa sind verloren. Die Recovery-Phrase kann nicht wiederhergestellt werden. Halte diese Recovery-Phrase geheim. Jeder, der die Recovery-Phrase kennt, ist de facto der Inhaber des Kontos.",
-  "message": "Botschaft",
-  "message_is_text": "Textnachricht?",
-  "messages": "Mitteilungen",
+  "message": "Nachricht",
+  "message_is_text": "Textnachricht",
+  "messages": "Gespräche",
   "minimum_fee": "Minimum",
   "multi_out_payment": "Zahlungen",
   "my_assets": "Meine Token",
@@ -519,7 +519,7 @@
   "view_alias": "Alias anzeigen",
   "recipient_required": "Empfänger ist erforderlich",
   "unregistered_address": "Nicht registrierte Adresse",
-  "account_offline": "Nur ansehen",
+  "account_offline": "Beobachten",
   "account_safe": "Sicher",
   "account_unsafe": "Unsicher!",
   "error_connection_fail": "Es konnte keine Verbindung zu einem Knoten/Peer hergestellt werden. Bitte wähle einen anderen aus",
@@ -530,7 +530,7 @@
   "account_successfully_deleted": "Konto/Konten erfolgreich entfernt",
   "no_public_key_title": "Warnung! - Dieses Konto besitzt keinen öffentlichen Schlüssel!",
   "not_registered_title": "Dieses Konto ist nicht in der Blockchain registriert",
-  "not_registered_warning": "Dieses Konto hat noch keine Transaktionen. Wenn du beabsichtigst, dieses Konto zum Senden und/oder Empfangen zu verwenden, wird empfohlen, dieses Konto jetzt zu aktivieren.",
+  "not_registered_warning": "Dieses Konto hat noch keine Transaktionen. Wenn Sie beabsichtigen, dieses Konto zum Senden und/oder Empfangen zu verwenden, wird empfohlen, dieses Konto jetzt zu aktivieren/schützen.",
   "load_all_transactions_hint": "Das Laden aller Transaktionen verursacht viele Anfragen mit hoher Bandbreitennutzung. Abhängig von deiner Internetverbindung und der des Knotens und der Anzahl der Transaktionen kann dieser Vorgang einige Zeit dauern. Nach dem Abrufen werden die Transaktionen lokal zwischengespeichert. Möchtest Du wirklich alle Transaktionen laden? (Das Abruflimit ist auf 10.000 Transaktionen begrenzt.)",
   "load_all_transactions": "Alle laden",
   "manage_accounts": "Konten verwalten",
@@ -563,5 +563,11 @@
   "add_as_contact": "Als Kontakt hinzufügen",
   "edit_contact": "Kontakt bearbeiten",
   "error_add_contact": "Kontakt nicht hinzugefügt. Höchstwahrscheinlich hast du dieses Konto bereits hinzugefügt.",
-  "no_contact_found": "Kein Kontakt gefunden"
+  "no_contact_found": "Kein Kontakt gefunden",
+  "contact": "Kontakt",
+  "send_single_message": "Nachricht senden",
+  "message_is_binary": "Datennachricht",
+  "add_account_or_contact": "Konto oder Kontakt hinzufügen",
+  "hint_new_account": "Dies ist ein neues Konto. Es ist noch nicht in der Blockchain registriert, hat also keine Transaktionen.",
+  "account_new": "Neu"
 }
