--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -253,8 +253,8 @@
   "memorize_passphrase_help": "Please store this recovery phrase in a secure place. This recovery phrase is needed in order to access your Signum account. ",
   "memorize_passphrase_help_addon": "If you lose the recovery phrase you won't be able to do any transactions, i.e. your coins are lost. The recovery phrase is not recoverable. Keep this recovery phrase secret. Everybody who knows the recovery phrase is de facto the owner of the account.",
   "message": "Message",
-  "message_is_text": "Message is Text?",
-  "messages": "Messages",
+  "message_is_text": "Text Message",
+  "messages": "Conversations",
   "minimum_fee": "Minimum",
   "mint_token": "Token Minting",
   "multi_out_payment": "Payments",
@@ -272,7 +272,7 @@
   "no_public_key_title": "Warning! - This account does not own a public key!",
   "no_public_key_warning": "This means it's not protected and at risk. Never hold funds on an unprotected account. Please activate the account to obtain your public key and protect it.",
   "not_registered_title": "This account is not registered in the blockchain",
-  "not_registered_warning": "This account has no transactions yet. If you intend to use this account for sending and/or receiving, it's recommended to activate this account now.",
+  "not_registered_warning": "This account has no transactions yet. If you intend to use this account for sending and/or receiving, it's recommended to activate/protect this account now.",
   "no_transactions_yet": "No transactions yet.",
   "node_hint_no_multiout": "No multiout payments supported",
   "node_not_set": "Could not change node. Most probable it is not reachable.",
@@ -563,5 +563,11 @@
   "add_as_contact": "Add as Contact",
   "edit_contact": "Edit Contact",
   "error_add_contact": "Contact not added. Most probably you have added that account already.",
-  "no_contact_found": "No contact found"
+  "no_contact_found": "No contact found",
+  "contact": "Contact",
+  "send_single_message": "Send Message",
+  "message_is_binary": "Data Message",
+  "add_account_or_contact": "Add Account or Contact",
+  "hint_new_account": "This is a new account. It's not registered on the chain yet, i.e. has no transactions.",
+  "account_new": "New"
 }
