--- a/web/angular-wallet/src/locales/fi.json
+++ b/web/angular-wallet/src/locales/fi.json
@@ -231,8 +231,8 @@
   "memorize_passphrase_help": "Säilytä tämä tunnuslause turvallisessa paikassa. Tätä salasanaa tarvitaan Signum-tilisi käyttämiseen.",
   "memorize_passphrase_help_addon": "Jos kadotat salasanasi, et voi tehdä mitään tapahtumia, eli kolikkosi menetetään. Salasanaa ei voi palauttaa. Pidä tämä tunnuslause salassa. Kaikki salasanan tuntevat ovat tosiasiallisesti tilin omistajia.",
   "message": "Viesti",
-  "message_is_text": "Viesti on teksti?",
-  "messages": "Viestit",
+  "message_is_text": "Tekstiviesti",
+  "messages": "Keskustelut",
   "minimum_fee": "Minimi",
   "multi_out_payment": "Maksut",
   "my_assets": "Omat merkit",
@@ -530,7 +530,7 @@
   "account_successfully_deleted": "Tilit poistettu onnistuneesti",
   "no_public_key_title": "Varoitus! - Tämä tili ei omista julkista avainta!",
   "not_registered_title": "Tätä tiliä ei ole rekisteröity lohkoketjuun",
-  "not_registered_warning": "Tällä tilillä ei ole vielä tapahtumia. Jos aiot käyttää tätä tiliä lähettämiseen ja/tai vastaanottamiseen, on suositeltavaa aktivoida tämä tili nyt.",
+  "not_registered_warning": "Tällä tilillä ei ole vielä tapahtumia. Jos aiot käyttää tätä tiliä lähettämiseen ja/tai vastaanottamiseen, on suositeltavaa aktivoida/suojata tämä tili nyt.",
   "load_all_transactions": "Lataa kaikki",
   "load_all_transactions_hint": "Kaikkien tapahtumien lataaminen aiheuttaa lopulta paljon pyyntöjä suurella kaistanleveyden käytöllä. Riippuen sinun ja solmujen Internet-yhteydestä ja tapahtumien määrästä tämä toiminto voi kestää jonkin aikaa. Kun tapahtumat on haettu, ne tallennetaan välimuistiin paikallisesti. Haluatko todella ladata kaikki tapahtumat? (Hakuraja on 10 000 tapahtumaa)",
   "manage_accounts": "Hallinnoi tilejä",
@@ -563,5 +563,11 @@
   "add_as_contact": "Lisää yhteyshenkilöksi",
   "edit_contact": "Muokkaa yhteystietoa",
   "error_add_contact": "Yhteystietoa ei lisätty. Todennäköisesti olet jo lisännyt kyseisen tilin.",
-  "no_contact_found": "Yhteyttä ei löytynyt"
+  "no_contact_found": "Yhteyttä ei löytynyt",
+  "contact": "Ottaa yhteyttä",
+  "send_single_message": "Lähetä viesti",
+  "message_is_binary": "Dataviesti",
+  "add_account_or_contact": "Lisää tili tai yhteystieto",
+  "hint_new_account": "Tämä on uusi tili. Se ei ole vielä rekisteröitynyt ketjuun, eli sillä ei ole tapahtumia.",
+  "account_new": "Uusi"
 }
