--- a/web/angular-wallet/src/locales/fr.json
+++ b/web/angular-wallet/src/locales/fr.json
@@ -231,8 +231,8 @@
   "memorize_passphrase_help": "Veuillez conserver cette phrase secrète dans un endroit sûr. Cette phrase secrète est nécessaire pour accéder à votre compte Signum.",
   "memorize_passphrase_help_addon": "Si vous perdez la phrase secrète, vous ne pourrez effectuer aucune transaction, c'est-à-dire que vos pièces sont perdues. La phrase secrète n'est pas récupérable. Gardez cette phrase secrète secrète. Toute personne connaissant la phrase secrète est de facto le propriétaire du compte.",
   "message": "Un message",
-  "message_is_text": "Le message est un texte ?",
-  "messages": "messages",
+  "message_is_text": "Message texte",
+  "messages": "Conversations",
   "minimum_fee": "Le minimum",
   "multi_out_payment": "Paiements",
   "my_assets": "Mes jetons",
@@ -530,7 +530,7 @@
   "account_successfully_deleted": "Compte(s) supprimé(s) avec succès",
   "no_public_key_title": "Avertissement! - Ce compte ne possède pas de clé publique !",
   "not_registered_title": "Ce compte n'est pas enregistré dans la blockchain",
-  "not_registered_warning": "Ce compte n'a pas encore de transactions. Si vous avez l'intention d'utiliser ce compte pour envoyer et/ou recevoir, il est recommandé d'activer ce compte maintenant.",
+  "not_registered_warning": "Ce compte n'a pas encore de transactions. Si vous avez l'intention d'utiliser ce compte pour envoyer et/ou recevoir, il est recommandé d'activer/protéger ce compte maintenant.",
   "load_all_transactions": "Charger tout",
   "load_all_transactions_hint": "Le chargement de toutes les transactions entraîne finalement de nombreuses requêtes avec une utilisation élevée de la bande passante. En fonction de la vôtre et de la connexion Internet des nœuds et du nombre de transactions, cette action peut prendre un certain temps. Une fois récupérées, les transactions sont mises en cache localement. Voulez-vous vraiment charger toutes les transactions ? (La limite de récupération est limitée à 10 000 transactions)",
   "manage_accounts": "Gérer les comptes",
@@ -563,5 +563,11 @@
   "add_as_contact": "Ajouter comme contact",
   "edit_contact": "Modifier le contact",
   "error_add_contact": "Contact non ajouté. Vous avez probablement déjà ajouté ce compte.",
-  "no_contact_found": "Aucun contact trouvé"
+  "no_contact_found": "Aucun contact trouvé",
+  "contact": "Contact",
+  "send_single_message": "Envoyer le message",
+  "message_is_binary": "Message de données",
+  "add_account_or_contact": "Ajouter un compte ou un contact",
+  "hint_new_account": "Ceci est un nouveau compte. Il n'est pas encore enregistré sur la chaîne, c'est-à-dire qu'il n'a aucune transaction.",
+  "account_new": "Nouveau"
 }
