--- a/web/angular-wallet/src/locales/pl.json
+++ b/web/angular-wallet/src/locales/pl.json
@@ -231,8 +231,8 @@
   "memorize_passphrase_help": "Proszę przechowywać to hasło w bezpiecznym miejscu. To hasło jest potrzebne, aby uzyskać dostęp do konta Signum.",
   "memorize_passphrase_help_addon": "Jeśli zgubisz hasło, nie będziesz mógł dokonywać żadnych transakcji, tzn. Twoje monety zostaną utracone. Hasła nie można odzyskać. Zachowaj to hasło w tajemnicy. Każdy, kto zna hasło, jest de facto właścicielem konta.",
   "message": "Wiadomość",
-  "message_is_text": "Wiadomość jest tekstowa?",
-  "messages": "Wiadomości",
+  "message_is_text": "Wiadomość tekstowa",
+  "messages": "Rozmowy",
   "minimum_fee": "Minimum",
   "multi_out_payment": "Płatności",
   "my_assets": "Moje tokeny",
@@ -530,7 +530,7 @@
   "account_successfully_deleted": "Konta zostały pomyślnie usunięte",
   "no_public_key_title": "Ostrzeżenie! - To konto nie posiada klucza publicznego!",
   "not_registered_title": "To konto nie jest zarejestrowane w łańcuchu bloków",
-  "not_registered_warning": "Na tym koncie nie ma jeszcze żadnych transakcji. Jeśli zamierzasz używać tego konta do wysyłania i/lub odbierania, zalecamy aktywację tego konta teraz.",
+  "not_registered_warning": "Na tym koncie nie ma jeszcze żadnych transakcji. Jeśli zamierzasz używać tego konta do wysyłania i/lub odbierania, zalecamy aktywację/ochronę tego konta teraz.",
   "load_all_transactions": "Załaduj wszystko",
   "load_all_transactions_hint": "Załadowanie wszystkich transakcji ostatecznie powoduje wiele żądań z dużym wykorzystaniem przepustowości. W zależności od połączenia internetowego twojego i węzłów oraz liczby transakcji ta czynność może zająć trochę czasu. Po pobraniu transakcje są buforowane lokalnie. Czy na pewno chcesz załadować wszystkie transakcje? (Limit pobierania jest ograniczony do 10 000 transakcji)",
   "manage_accounts": "Zarządzaj kontami",
@@ -563,5 +563,11 @@
   "add_as_contact": "Dodaj jako kontakt",
   "edit_contact": "Edytuj kontakt",
   "error_add_contact": "Nie dodano kontaktu. Najprawdopodobniej dodałeś już to konto.",
-  "no_contact_found": "Nie znaleziono kontaktu"
+  "no_contact_found": "Nie znaleziono kontaktu",
+  "contact": "Kontakt",
+  "send_single_message": "Wyślij wiadomość",
+  "message_is_binary": "Wiadomość danych",
+  "add_account_or_contact": "Dodaj konto lub kontakt",
+  "hint_new_account": "To jest nowe konto. Nie jest jeszcze zarejestrowany w sieci, czyli nie zawiera żadnych transakcji.",
+  "account_new": "Nowy"
 }
