--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -231,8 +231,8 @@
   "memorize_passphrase_help": "Vă rugăm să stocați această expresie de acces într-un loc sigur. Această expresie de acces este necesară pentru a accesa contul dvs. Signum.",
   "memorize_passphrase_help_addon": "Dacă pierdeți expresia de acces, nu veți putea face nicio tranzacție, adică monedele dvs. se pierd. Expresia de acces nu poate fi recuperată. Păstrați această parolă secretă. Oricine cunoaște fraza de acces este de facto proprietarul contului.",
   "message": "Mesaj",
-  "message_is_text": "Mesajul este text?",
-  "messages": "Mesaje",
+  "message_is_text": "Mesaj text",
+  "messages": "Conversații",
   "minimum_fee": "Minim",
   "multi_out_payment": "Plăți",
   "my_assets": "Jetoanele mele",
@@ -530,7 +530,7 @@
   "account_successfully_deleted": "Conturile au fost eliminate cu succes",
   "no_public_key_title": "Avertizare! - Acest cont nu deține o cheie publică!",
   "not_registered_title": "Acest cont nu este înregistrat în blockchain",
-  "not_registered_warning": "Acest cont nu are încă tranzacții. Dacă intenționați să utilizați acest cont pentru trimitere și/sau primire, este recomandat să activați acest cont acum.",
+  "not_registered_warning": "Acest cont nu are încă tranzacții. Dacă intenționați să utilizați acest cont pentru trimitere și/sau primire, este recomandat să activați/protejați acest cont acum.",
   "load_all_transactions": "Încărcați tot",
   "load_all_transactions_hint": "Încărcarea tuturor tranzacțiilor provoacă în cele din urmă o mulțime de solicitări cu o utilizare mare a lățimii de bandă. În funcție de conexiunea la internet a ta și a nodurilor și de numărul de tranzacții, această acțiune poate dura ceva timp. Odată preluate, tranzacțiile sunt stocate în cache local. Chiar doriți să încărcați toate tranzacțiile? (Limita de preluare este limitată la 10.000 tranzacții)",
   "manage_accounts": "Gestionați Conturile",
@@ -563,5 +563,11 @@
   "add_as_contact": "Adăugați ca contact",
   "edit_contact": "Editați contactul",
   "error_add_contact": "Contactul nu a fost adăugat. Cel mai probabil ați adăugat deja acel cont.",
-  "no_contact_found": "Nu a fost găsit niciun contact"
+  "no_contact_found": "Nu a fost găsit niciun contact",
+  "contact": "a lua legatura",
+  "send_single_message": "Trimite mesaj",
+  "message_is_binary": "Mesaj de date",
+  "add_account_or_contact": "Adăugați cont sau contact",
+  "hint_new_account": "Acesta este un cont nou. Nu este încă înregistrată în lanț, adică nu are tranzacții.",
+  "account_new": "Nou"
 }
